--- a/app/res/layout/spinner_buysell_list.xml
+++ b/app/res/layout/spinner_buysell_list.xml
@@ -2,6 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:textSize="20sp"
+    android:textStyle="bold"
     android:layout_height="match_parent" >
     
 
