Partial completeness in MyOrders/Selling

--- a/app/res/layout/listview_orders_row.xml
+++ b/app/res/layout/listview_orders_row.xml
@@ -13,8 +13,8 @@
 		android:background="@drawable/bg_card">
 		<!-- Card Contents go here -->
 		<GridLayout
-		    android:layout_width="fill_parent"
-		    android:layout_height="fill_parent"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
 		    android:columnCount="2" >
 		
 		    <TextView
