--- a/app/res/layout/listview_address_row.xml
+++ b/app/res/layout/listview_address_row.xml
@@ -2,8 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="5dp" >
-    
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginTop="4dp"
+    android:background="@drawable/bg_card" >
+
     <TextView
         android:id="@+id/lblAddrAddressLine1"
         android:layout_width="wrap_content"
@@ -41,10 +45,10 @@
 
     <ImageView
         android:id="@+id/imgAddrDefault"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/btn_check_on_focused_holo_dark" />
+        android:layout_height="30dp"
+        android:layout_width="30dp"
+        android:src="@drawable/navigation_accept" />
 
 </RelativeLayout>
