--- a/app/res/layout/listview_creditcard_row.xml
+++ b/app/res/layout/listview_creditcard_row.xml
@@ -1,89 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/GridLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <ImageView
-        android:contentDescription="@string/cc_image_desc"
-        android:id="@+id/imgCreditCard"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:paddingLeft="3dp"
-        android:paddingRight="3dp"
-        android:paddingTop="3dp"
-        android:paddingBottom="3dp"
-        android:src="@drawable/cc_mastercard" />
-
-    <TextView
-        android:id="@+id/lblNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/imgCreditCard"
-        android:text="@string/cc_number"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/txtCCNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/lblNumber"
-        android:layout_alignBottom="@+id/lblNumber"
-        android:layout_toRightOf="@+id/lblNumber"
-        android:paddingLeft="3dp"
-        android:text="Number?"
-        android:textSize="12sp" />
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    android:layout_marginTop="4dp"
+    android:background="@drawable/bg_card"
+    android:columnCount="5"
+    android:rowCount="3"
+    android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/lblExpire"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="40dp"
+        android:layout_column="2"
+        android:layout_row="2"
         android:text="@string/cc_expire"
         android:textSize="15sp"
+        android:layout_gravity="right"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtCCExpire"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/lblExpire"
-        android:layout_below="@+id/txtCCNumber"
+        android:layout_column="3"
+        android:layout_row="2"
         android:text="expire?"
+        android:layout_gravity="left"
         android:textSize="12sp" />
 
     <TextView
         android:id="@+id/lblName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/txtCCExpire"
-        android:layout_alignLeft="@+id/lblNumber"
+        android:layout_column="2"
+        android:layout_row="1"
         android:text="@string/cc_name"
         android:textSize="15sp"
+        android:layout_gravity="right"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtCCName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/lblName"
-        android:layout_alignBottom="@+id/lblName"
-        android:layout_toRightOf="@+id/lblName"
+        android:layout_column="3"
+        android:layout_row="1"
         android:paddingLeft="3dp"
         android:text="Name?"
+        android:layout_gravity="left"
+        android:textSize="12sp" />
+
+
+    <ImageView
+        android:id="@+id/imgCCDefault"
+        android:layout_column="4"
+        android:layout_rowSpan="3"
+        android:layout_row="0"
+        android:layout_height="30dp"
+        android:layout_width="30dp"
+        android:layout_gravity="right|center_vertical"
+        android:src="@drawable/navigation_accept" />
+
+    <TextView
+        android:id="@+id/lblNumber"
+        android:layout_column="2"
+        android:layout_row="0"
+        android:text="@string/cc_number"
+        android:textSize="15sp"
+        android:layout_gravity="right"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/txtCCNumber"
+        android:layout_column="3"
+        android:layout_row="0"
+        android:paddingLeft="3dp"
+        android:text="Number?"
+        android:layout_gravity="left"
         android:textSize="12sp" />
     
     <ImageView
-        android:id="@+id/imgCCDefault"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/btn_check_on_focused_holo_dark" />
+        android:contentDescription="@string/cc_image_desc"
+        android:id="@+id/imgCreditCard"
+        android:layout_rowSpan="3"        
+        android:layout_column="0"
+        android:layout_row="0"
+        android:layout_gravity="left|center_vertical"
+        android:src="@drawable/cc_mastercard" />
 
-</RelativeLayout>
+
+
+</GridLayout>
