--- a/app/res/layout/listview_creditcard_row.xml
+++ b/app/res/layout/listview_creditcard_row.xml
@@ -1,90 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent">
+<!--  AUNQUE DIGA QUE NO EL EFECTO DE CARD SE LOGRA ASI -->
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent" 
+		android:layout_marginLeft="6dp"
+		android:layout_marginRight="6dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginBottom="4dp"
+		android:background="@drawable/bg_card">
+		<!-- Card Contents go here -->
+<GridLayout 
     android:id="@+id/GridLayout1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:layout_marginLeft="6dp"
-    android:layout_marginRight="6dp"
-    android:layout_marginTop="4dp"
-    android:background="@drawable/bg_card"
-    android:columnCount="5"
-    android:rowCount="3"
+    android:columnCount="3"
     android:orientation="horizontal" >
 
-    <TextView
-        android:id="@+id/lblExpire"
-        android:layout_column="2"
-        android:layout_row="2"
-        android:text="@string/cc_expire"
-        android:textSize="15sp"
-        android:layout_gravity="right"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/txtCCExpire"
-        android:layout_column="3"
-        android:layout_row="2"
-        android:text="expire?"
-        android:layout_gravity="left"
-        android:textSize="12sp" />
-
-    <TextView
-        android:id="@+id/lblName"
-        android:layout_column="2"
-        android:layout_row="1"
-        android:text="@string/cc_name"
-        android:textSize="15sp"
-        android:layout_gravity="right"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/txtCCName"
-        android:layout_column="3"
-        android:layout_row="1"
-        android:paddingLeft="3dp"
-        android:text="Name?"
-        android:layout_gravity="left"
-        android:textSize="12sp" />
-
-
     <ImageView
-        android:id="@+id/imgCCDefault"
-        android:layout_column="4"
-        android:layout_rowSpan="3"
-        android:layout_row="0"
-        android:layout_height="30dp"
-        android:layout_width="30dp"
-        android:layout_gravity="right|center_vertical"
-        android:src="@drawable/navigation_accept" />
-
-    <TextView
-        android:id="@+id/lblNumber"
-        android:layout_column="2"
-        android:layout_row="0"
-        android:text="@string/cc_number"
-        android:textSize="15sp"
-        android:layout_gravity="right"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/txtCCNumber"
-        android:layout_column="3"
-        android:layout_row="0"
-        android:paddingLeft="3dp"
-        android:text="Number?"
-        android:layout_gravity="left"
-        android:textSize="12sp" />
-    
-    <ImageView
-        android:contentDescription="@string/cc_image_desc"
         android:id="@+id/imgCreditCard"
-        android:layout_rowSpan="3"        
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_column="0"
-        android:layout_row="0"
-        android:layout_gravity="left|center_vertical"
+        android:layout_gravity="left|center"
+        android:contentDescription="@string/cc_image_desc"
         android:src="@drawable/cc_mastercard" />
 
+    <LinearLayout
+        android:paddingLeft="10dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical" >
 
+        <LinearLayout 
+            	android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+            <TextView
+                
+	            android:id="@+id/lblExpire"
+	            android:layout_width="wrap_content"
+	            android:layout_height="wrap_content"
+	            android:text="@string/cc_expire"
+	            android:textSize="15sp"
+	            android:textStyle="bold" />
+
+		    <TextView
+		        android:paddingLeft="2dp"
+		        android:id="@+id/txtCCExpire"
+		        android:layout_marginLeft="2dp"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="Expire?"
+		        android:textSize="12sp" />
+        </LinearLayout>
+        
+	 	<LinearLayout 
+            	android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+		    <TextView
+		        android:id="@+id/lblName"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="@string/cc_name"
+		        android:textSize="15sp"
+		        android:textStyle="bold" />
+
+		    <TextView
+		        android:paddingLeft="2dp"
+		        android:id="@+id/txtCCName"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:text="Name?"
+		        android:textSize="12sp" />
+
+		</LinearLayout>
+		<LinearLayout 
+            	android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:orientation="horizontal" >
+	    <TextView
+	        android:id="@+id/lblNumber"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/cc_number"
+	        android:textSize="15sp"
+	        android:textStyle="bold" />
+	
+	    <TextView
+	        android:paddingLeft="2dp"
+	        android:id="@+id/txtCCNumber"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="Number?"
+	        android:textSize="12sp" />
+	    </LinearLayout>
+
+    </LinearLayout>
+    
+    <ImageView
+        android:id="@+id/imgCCDefault"
+        android:layout_column="2"
+        android:layout_height="30dp"
+        android:layout_width="30dp"
+        android:layout_gravity="right|center"
+        android:src="@drawable/navigation_accept" />
 
 </GridLayout>
+</LinearLayout>
+
+</FrameLayout>
