--- a/app/res/layout/listview_filter_spinner.xml
+++ b/app/res/layout/listview_filter_spinner.xml
@@ -2,6 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/search_filter_spinner"
     android:textSize="20sp"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
  />
