--- a/app/res/layout/fragment_product.xml
+++ b/app/res/layout/fragment_product.xml
@@ -154,51 +154,38 @@
                 android:orientation="vertical" >
             </LinearLayout>
 
+            <RelativeLayout
+                android:visibility="gone"
+                android:id="@+id/noImageTextView"
+                android:layout_width="match_parent"
+                android:layout_height="80dp" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="No Images"
+                    android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            </RelativeLayout>
+
             <HorizontalScrollView
-                android:id="@+id/horizontalScrollView1"
+                android:id="@+id/imagesScrollContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
                 <LinearLayout
+                    android:id="@+id/imagesContainer"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="150dp"
                     android:layout_marginBottom="5dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:layout_marginTop="5dp"
+                    android:gravity="center"
                     android:orientation="horizontal" >
+                  
 
-                    <ImageView
-                        android:id="@+id/imgProductShipped"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="5dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/cat1" />
-
-                    <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="5dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/cat2" />
-
-                    <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="5dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/cat3" />
-
-                    <ImageView
-                        android:id="@+id/imageView4"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_margin="5dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/cat4" />
                 </LinearLayout>
             </HorizontalScrollView>
 
