--- a/app/res/layout/listview_product.xml
+++ b/app/res/layout/listview_product.xml
@@ -22,7 +22,7 @@
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content" >
 		        <ImageView
-			        android:id="@+id/prodrow_orders_image"
+			        android:id="@+id/prodrow_image"
 			        android:contentDescription="@string/listbuysellrow_img_desc"
 			        android:layout_width="50dp"
 			        android:layout_height="50dp"
@@ -30,7 +30,7 @@
 			        android:layout_gravity="left|center"
 			        android:src="@drawable/no_image" />
 		        <TextView
-			         android:id="@+id/prodrow_orders_title"
+			         android:id="@+id/prodrow_title"
 			         android:gravity="fill_horizontal"
 			         android:layout_weight="1"
 			         android:lines="3"
@@ -45,7 +45,7 @@
 			        android:orientation="vertical" >
 			
 			        <TextView
-			            android:id="@+id/prodrow_orders_price"
+			            android:id="@+id/prodrow_price"
 			           	android:layout_width="wrap_content"
 			            android:layout_weight="1"
 			            android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
 			            android:text="@string/listbuysellrow_price" />
 			
 			        <TextView
-			            android:id="@+id/prodrow_orders_type"
+			            android:id="@+id/prodrow_type"
 			            android:layout_width="wrap_content"
 			            android:layout_weight="1"
 			            android:paddingBottom="2dp"
@@ -61,14 +61,14 @@
 			            android:text="@string/listbuysellrow_type" />
 			
 			        <TextView
-			            android:id="@+id/prodrow_orders_date_tittle"
+			            android:id="@+id/prodrow_date_tittle"
 			            android:layout_width="wrap_content"
 			            android:layout_weight="1"
 			            android:layout_height="wrap_content"
 			            android:paddingBottom="2dp"
 			            android:text="@string/listbuysellrow_date_title" />
 			        <TextView
-			            android:id="@+id/prodrow_orders_date"
+			            android:id="@+id/prodrow_date"
 			            android:layout_width="wrap_content"
 			            android:layout_weight="1"
 			            android:layout_height="wrap_content"
@@ -76,22 +76,6 @@
 			            android:text="@string/listbuysellrow_date" />
 			
 			    </LinearLayout>
-		    </TableRow>
-
-		    <TableRow
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content" >
-		         <TextView
-			        android:id="@+id/prodrow_orders_quantity"
-			        android:layout_column="0"
-			        android:layout_gravity="left|top"
-			        android:text="@string/listbuysellrow_quantity" />
-			    <Space />
-			    <TextView
-			        android:id="@+id/prodrow_orders_tracking"
-			        android:layout_column="2"
-			        android:layout_gravity="right|top"
-			        android:text="@string/listbuysellrow_tracking" />
 		    </TableRow>
 		</TableLayout>
 		
