--- a/app/res/layout/listview_orders_row.xml
+++ b/app/res/layout/listview_orders_row.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="wrap_content">
 <!--  AUNQUE DIGA QUE NO EL EFECTO DE CARD SE LOGRA ASI -->
 	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="match_parent" 
+		android:layout_height="wrap_content" 
 		android:layout_marginLeft="6dp"
 		android:layout_marginRight="6dp"
 		android:layout_marginTop="4dp"
@@ -40,13 +40,16 @@
 		        android:layout_gravity="left|top"
 		        android:layout_row="1"
 		        android:textSize="15sp"
-		        android:layout_margin="10dp"
+		        android:paddingTop="5dp"
+		        android:paddingLeft="5dp"
 		        android:text="@string/orders_date" />
 		
 		
 		    <TextView
 		        android:id="@+id/ordersrow_quantity"
 		        android:layout_column="1"
+		        android:paddingTop="5dp"
+		        android:paddingRight="5dp"
 		        android:textSize="15sp"
 		        android:layout_gravity="right|top"
 		        android:text="@string/orders_quantity" />
