Fixes on Sell a Product. Added some intel to do different things if the Product is going to be an Auction.

--- a/app/res/layout/fragment_sellproduct.xml
+++ b/app/res/layout/fragment_sellproduct.xml
@@ -82,32 +82,12 @@
         android:hint="@string/hint_productbuyoutprice"
         android:inputType="numberDecimal" />
 
-    <EditText
-        android:id="@+id/txtProductBidPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/txtProductBuyoutPrice"
-        android:layout_alignBottom="@+id/txtProductBuyoutPrice"
-        android:layout_alignRight="@+id/txtProductQuantity"
-        android:ems="7"
-        android:hint="@string/hint_productbidprice"
-        android:inputType="numberDecimal" />
-
-    <EditText
-        android:id="@+id/txtProductEndAuction"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txtProductBuyoutPrice"
-        android:layout_below="@+id/txtProductBuyoutPrice"
-        android:ems="7"
-        android:hint="@string/hint_productendauction" />
-
     <Button
         android:id="@+id/btnProductSelectPhoto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/txtProductEndAuction"
-        android:layout_alignRight="@+id/txtProductBidPrice"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/txtProductEndAuction"
         android:text="@string/product_selectphoto" />
 
@@ -129,5 +109,33 @@
         android:text="@string/product_sellit"
         android:textSize="25sp"
         android:textColor="@color/dark_green" />
+
+    <CheckBox
+        android:id="@+id/chkAuctionEnabled"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/txtProductQuantity"
+        android:layout_below="@+id/txtProductQuantity"
+        android:text="@string/will_have_auction" />
+
+    <EditText
+        android:id="@+id/txtProductBidPrice"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/chkAuctionEnabled"
+        android:ems="7"
+        android:hint="@string/hint_productbidprice"
+        android:inputType="numberDecimal" />
+
+    <EditText
+        android:id="@+id/txtProductEndAuction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/txtProductBidPrice"
+        android:layout_alignBottom="@+id/txtProductBidPrice"
+        android:layout_alignParentRight="true"
+        android:ems="7"
+        android:hint="@string/hint_productendauction" />
 
 </RelativeLayout>
