--- a/app/res/layout/fragment_product_list.xml
+++ b/app/res/layout/fragment_product_list.xml
@@ -29,24 +29,24 @@
         android:orientation="vertical" >
 
         <LinearLayout
-            android:background="@color/gray"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical" >
 
             <TextView
                 android:id="@+id/plTextView"
-                android:textStyle="bold"
-                android:textSize="16sp"
-                android:padding="10dp"
+                android:textStyle="bold|italic"
+                android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/product_list_best_match" />
 
             <Spinner
-                android:id="@+id/plSpinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_marginLeft="15dp"
+	        	android:paddingRight="40dp"
+	     	   android:layout_width="wrap_content"
+	        	android:layout_height="wrap_content"
+                android:id="@+id/plSpinner" />
 
         </LinearLayout>
 
