--- a/app/res/layout/fragment_product_list.xml
+++ b/app/res/layout/fragment_product_list.xml
@@ -31,18 +31,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/plTextView"
-                android:textStyle="bold|italic"
-                android:textSize="12sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/product_list_best_match" />
+            android:orientation="horizontal" >
+			<TextView
+		        android:id="@+id/plTextView"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:textSize="20sp"
+		        android:paddingLeft="10dp"
+		        android:paddingBottom="2dp"
+		        android:textStyle="bold"
+		        android:text="@string/product_list_best_match"
+		        
+		        />
 
             <Spinner
-                android:layout_marginLeft="15dp"
 	        	android:paddingRight="40dp"
 	     	   android:layout_width="wrap_content"
 	        	android:layout_height="wrap_content"
@@ -58,6 +60,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
+        <GridLayout
+        android:id="@+id/plNoneFound"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="6dp"
+		android:layout_marginRight="6dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginBottom="4dp"
+		android:background="@drawable/bg_card"
+        android:columnCount="2" >
+
+	        <TextView
+	            android:id="@+id/buy_nwin_load_tv"
+	            android:layout_column="0"
+	            android:paddingLeft="15dp"
+	            android:paddingTop="10dp"
+	            android:paddingBottom="10dp"
+	            android:layout_gravity="left|center_vertical"
+	            android:text="@string/noitem_found" />
+	        <Space />
+	
+	       
+	    </GridLayout>
         
     </LinearLayout>
 
