Admin Users now cool

--- a/app/res/layout/fragment_users_list.xml
+++ b/app/res/layout/fragment_users_list.xml
@@ -23,8 +23,10 @@
             android:id="@+id/AddUserButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
+            android:layout_marginTop="5dp"
             android:text="Create User" />
 
         <ListView
